# playground

./: .gitignore  CMakeLists.txt  Makefile  pyproject.toml  setup.py  test_ctypes.py
elan.dev/: .tmux.conf  Dockerfile.elan.dev  cmd.sh  docker-compose.elan.dev.yml
ext/: demo.cc
plantuml/: NPPTask.Sequence  ReferencePathManager.Sequence  VirtualLaneManager.Sequence  hdmap::mdk::HorizonKit.uml  hdmap::mdk::RefLine  np_planning.yaml  planning_task.uml
python_c_api/: demo.py
src/: CMakeLists.txt  main.cpp  main.py  test_ctypes.py
src/ctypes_protobuf_pyobject/: CMakeLists.txt  demo.cc  demo.py
src/design_pattern/behavior/chain_of_responsibility/: go.mod  main.go  main.py
src/design_pattern/behavior/chain_of_responsibility/golang/: handler.go  request.go  work.go
src/design_pattern/behavior/strategy/cpp/: CMakeLists.txt  Makefile  conanfile.txt  main.cpp
src/design_pattern/behavior/strategy/cpp/deprecated/: strategy.deprecated.cpp
src/design_pattern/behavior/strategy/cpp/good_case/: exchange.cpp  exchange.h  strategies.cpp  strategies.h  work.cpp  work.h
src/design_pattern/behavior/visitor/: go.mod  main.go
src/design_pattern/behavior/visitor/golang/: component.go  joy.go  laowang.go  rate.go  sdk.go  visitor.go  work.go
src/design_pattern/creational/builder/: main.go
src/design_pattern/creational/builder/v1/: work.go
src/design_pattern/creational/builder/v2/: bmw.go  builder.go  car.go  director.go  porsche.go  work.go
src/design_pattern/creational/factory_method/: Makefile  main.go  main.py
src/design_pattern/creational/factory_method/v1/: work.go  work.py
src/design_pattern/creational/factory_method/v2/: car.go  carFactory.go  iCar.go  porche.go  work.go
src/design_pattern/creational/factory_method/v3/: car.go  carFactory.go  iCar.go  iCarFactory.go  iManual.go  porche.go  work.go
src/design_pattern/creational/singleton/: main.go
src/design_pattern/creational/singleton/v1/: singleton.go
src/design_pattern/creational/singleton/v2/: singleton.go
src/design_pattern/creational/singleton/v3/: singleton.go
src/design_pattern/structural/decorator/: main.go  main.py
src/design_pattern/structural/decorator/golang/: compressStream.go  encryptStream.go  fileStream.go  networkStream.go  stream.go  work.go
src/design_pattern/structural/decorator/py/: bad_sample.py
src/module_c/: CMakeLists.txt  Makefile  module_c.c  module_c.h
src/module_cpp/: CMakeLists.txt  module_cpp.cpp  module_cpp.hpp
src/proto/: CMakeLists.txt  addressbook.pb.cc  addressbook.pb.h  addressbook_pb2.py
src/python_binding/: CMakeLists.txt  Makefile  README.md  addressbook.cc  addressbook.py
src/realpython.example/: Makefile  fputsmodule.c
src/test_c/: CMakeLists.txt  test.c  test.h
src/test_cpp/: CMakeLists.txt  test.cpp  test.hpp
src/tutorial/: tutorial.cc
tools/: new_playground.sh
