[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["zhenghaowen <zhenghaowen@momenta.ai>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
